improved line breaks on mobile for headings

--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: sertig;
-  src: url("assets/font/Sertig.otf");
+  src: url('assets/font/Sertig.otf');
   font-display: swap;
 }
 
 .header-pattern {
-  background: url("assets/images/header.jpg");
+  background: url('assets/images/header.jpg');
   height: 90px;
   padding-top: 15px;
 }
@@ -27,7 +27,12 @@ section {
   padding: 50px 15px;
   width: 100%;
   font-size: 22px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
+
+section h1 {
+  overflow: auto;
+  overflow-wrap: break-word;
 }
 
 section img {
